packages/esm-service-queues-app/src/modals/clear-queue-entries-modal/clear-queue-entries.scss
@use '@carbon/type';
@use '@openmrs/esm-styleguide/src/vars' as *;

.subHeading {
  @include type.type-style('heading-compact-01');
  color: $ui-05;
}

.clearQueueButton,
.clearQueueButton:hover {
  color: $danger;
}

@media (max-width: 41.9375rem) {
  :global(.cds--modal-container) {
    position: fixed !important;
    top: 0 !important;
    bottom: 0 !important;
    left: 50% !important;
    margin: auto 0 auto -42% !important;
    width: 84% !important;
    max-height: 90% !important;
    height: fit-content !important;
    grid-template-rows: auto auto auto !important;
  }
}

